# cramer-short

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SOUL.md  bunfig.toml  dexter-export-2026-04-01-12-37-11.json  dexter-export-2026-04-01-12-37-11.md  dexter-export-2026-04-03-09-24-10.json  dexter-export-2026-04-03-09-24-10.md  dexter-export-2026-04-03-09-24-56.json  dexter-export-2026-04-03-09-24-56.md  dexter-export-2026-04-03-09-25-39.json  dexter-export-2026-04-03-09-25-39.md  dexter-export-2026-04-03-09-26-18.json  dexter-export-2026-04-03-09-26-18.md  dexter-export-2026-04-03-09-26-56.json  dexter-export-2026-04-03-09-26-56.md  dexter_list_profiles.ts  env.example  environment-research.yml  get-hybrid-values.ts  get-phase4-values.ts  package.json  reproduce-btc-markets.ts  test-log.js  test-ollama-response-shapes.ts
.dexter/: settings.json  (+3 more)
research/: PARITY.md  README.md  __init__.py  pyproject.toml
research/backtest/: __init__.py  _ci_transformer.py  _config.py  _window_forecaster.py  baselines.py  markov_tool_backtest.py  metrics.py  walk_forward.py
research/data/: __init__.py  metaforecast.py  polymarket.py  polymarket_clob.py  prices.py  sentiment.py
research/models/: __init__.py  adwin.py  beta_hmm.py  brier_replay_calibrator.py  calibration_offsets.py  conformal.py  convergence_time.py  crypto_native_peers.py  ensemble.py  forecast_policy.py  garch.py  garch_scales.py  hawkes.py  hmm.py  jump_diffusion.py  logit_jump_diffusion.py  longshot_shrinkage.py  markov.py  rnd.py  soft_regime.py  trajectory.py  transition_entropy.py  vol_regime.py
(+1417 files in other folders)
